--- a/index.html
+++ b/index.html
@@ -64,5 +64,8 @@
     </a>
     <p class="footer_caption">Minimal Template made in Webflow. All rights reserved.</p>
 </footer>
+<section>
+
+</section>
 </body>
 </html>
