--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
 </footer>
 <section>
     <p class="qwe">
-        ururururu 
+        ururururu
     </p>
     <form>
         <div>
             <button type="submit" class="btn1"
+        </div>
+        <div>
+            <input type="text" placeholder="URURURU" class="qqq111">
         </div>
     </form>
 </section>
