--- a/index.html
+++ b/index.html
@@ -57,32 +57,109 @@
     </section>
     <section class="brands">
         <div class="container">
-            <h2>How we make brands thrive</h2>
+            <h2 class="brands_title">How we make brands thrive</h2>
             <div class="d_flex">
                 <article>
-                    <img>
-                    <h4>SET a target</h4>
-                    <p>
+                    <img src="images/Frame.jpg" alt="icon">
+                    <h4 class="brands_h4">SET a target</h4>
+                    <p class="brands_p">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
                     </p>
                 </article>
                 <article>
-                    <img>
-                    <h4>design a solution</h4>
-                    <p>
+                    <img src="images/Frame_1.jpg" alt="icon" class="brands_img">
+                    <h4 class="brands_h4">design a solution</h4>
+                    <p class="brands_p">
                         Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
                     </p>
                 </article>
                 <article>
-                    <img>
-                    <h4>track the progress</h4>
-                    <p>
+                    <img src="images/Frame_2.jpg" alt="icon" class="brands_img">
+                    <h4 class="brands_h4">track the progress</h4>
+                    <p class="brands_p">
                         Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
                     </p>
                 </article>
             </div>
         </div>
-
+    </section>
+    <section class="project">
+        <div class="container">
+            <h2 class="project_title">Recent projects</h2>
+            <div class="d_flex">
+                <article>
+                    <img src="images/project_block1_1.jpg" alt="picture" class="project_img">
+                    <h4>woods</h4>
+                    <p>
+                        Photography
+                    </p>
+                </article>
+                <article>
+                    <img src="images/project_block1_2.jpg" alt="picture" class="project_img">
+                    <h4>path</h4>
+                    <p>
+                        Website • Photography
+                    </p>
+                </article>
+                <article>
+                    <img src="images/project_block1_3.jpg" alt="picture" class="project_img">
+                    <h4>darkness</h4>
+                    <p>
+                        Website
+                    </p>
+                </article>
+            </div>
+        </div>
+            <div class="container">
+                <div class="d_flex">
+                    <article class="project_pictures2">
+                        <img src="images/project_block2_1.jpg" alt="picture" class="project_img">
+                        <h4>waves</h4>
+                        <p>
+                            Photography
+                        </p>
+                    </article>
+                    <article class="project_pictures2">
+                        <img src="images/project_block2_2.jpg" alt="picture" class="project_img">
+                        <h4>drops</h4>
+                        <p>
+                            Website
+                        </p>
+                    </article>
+                    <article class="project_pictures2">
+                        <img src="images/project_block2_3.jpg" alt="picture" class="project_img">
+                        <h4>ocean</h4>
+                        <p>
+                            Website
+                        </p>
+                    </article>
+            </div>
+            </div>
+            <div class="container">
+                    <div class="d_flex">
+                        <article class="project_pictures3">
+                            <img src="images/project_block3_1.jpg" alt="picture" class="project_img">
+                            <h4>town</h4>
+                            <p>
+                                Website
+                            </p>
+                        </article>
+                        <article class="project_pictures3">
+                            <img src="images/project_block3_2.jpg" alt="picture" class="project_img">
+                            <h4>mountain</h4>
+                            <p>
+                                Website
+                            </p>
+                        </article>
+                        <article class="project_pictures3">
+                        <img src="images/project_block3_3.jpg" alt="picture" class="project_img">
+                        <h4>camera</h4>
+                        <p>
+                        Website
+                        </p>
+                    </article>
+            </div>
+        </div>
     </section>
 </main>
 <footer>
