--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
         <div class="container">
             <h2 class="brands_title">How we make brands thrive</h2>
             <div class="d_flex">
-                <article>
+                <article class="brands_article">
                     <img src="images/Frame.jpg" alt="icon">
                     <h4 class="brands_h4">SET a target</h4>
                     <p class="brands_p">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
                     </p>
                 </article>
-                <article>
+                <article class="brands_article">
                     <img src="images/Frame_1.jpg" alt="icon" class="brands_img">
                     <h4 class="brands_h4">design a solution</h4>
                     <p class="brands_p">
                         Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
                     </p>
                 </article>
-                <article>
+                <article class="brands_article">
                     <img src="images/Frame_2.jpg" alt="icon" class="brands_img">
                     <h4 class="brands_h4">track the progress</h4>
                     <p class="brands_p">
@@ -172,7 +172,7 @@
             <input type="text" name="budget" placeholder="Budget" class="footer_form1">
             </div>
             <div>
-            <textarea type="comment" name="massage" placeholder="Describe youre project..."class="footer_massage"></textarea>
+            <textarea type="comment" name="massage" placeholder="Describe youre project..." class="footer_massage"></textarea>
             </div>
             <div>
             <button type="submit" class="footer_btn">Send Message</button>
