--- a/index.html
+++ b/index.html
@@ -86,73 +86,65 @@
     <section class="project">
         <div class="container">
             <h2 class="project_title">Recent projects</h2>
-            <div class="d_flex">
+            <div class="flex_container_project" >
                 <article>
-                    <img src="images/project_block1_1.jpg" alt="picture" class="project_img">
+                    <img src="images/project_block1_1.jpg" alt="picture">
                     <h4>woods</h4>
                     <p>
                         Photography
                     </p>
                 </article>
                 <article>
-                    <img src="images/project_block1_2.jpg" alt="picture" class="project_img">
+                    <img src="images/project_block1_2.jpg" alt="picture">
                     <h4>path</h4>
                     <p>
                         Website • Photography
                     </p>
                 </article>
                 <article>
-                    <img src="images/project_block1_3.jpg" alt="picture" class="project_img">
+                    <img src="images/project_block1_3.jpg" alt="picture">
                     <h4>darkness</h4>
                     <p>
                         Website
                     </p>
                 </article>
-            </div>
-        </div>
-            <div class="container">
-                <div class="d_flex">
                     <article class="project_pictures2">
-                        <img src="images/project_block2_1.jpg" alt="picture" class="project_img">
+                        <img src="images/project_block2_1.jpg" alt="picture">
                         <h4>waves</h4>
                         <p>
                             Photography
                         </p>
                     </article>
                     <article class="project_pictures2">
-                        <img src="images/project_block2_2.jpg" alt="picture" class="project_img">
+                        <img src="images/project_block2_2.jpg" alt="picture">
                         <h4>drops</h4>
                         <p>
                             Website
                         </p>
                     </article>
                     <article class="project_pictures2">
-                        <img src="images/project_block2_3.jpg" alt="picture" class="project_img">
+                        <img src="images/project_block2_3.jpg" alt="picture">
                         <h4>ocean</h4>
                         <p>
                             Website
                         </p>
                     </article>
-            </div>
-            </div>
-            <div class="container">
-                    <div class="d_flex">
                         <article class="project_pictures3">
-                            <img src="images/project_block3_1.jpg" alt="picture" class="project_img">
+                            <img src="images/project_block3_1.jpg" alt="picture">
                             <h4>town</h4>
                             <p>
                                 Website
                             </p>
                         </article>
                         <article class="project_pictures3">
-                            <img src="images/project_block3_2.jpg" alt="picture" class="project_img">
+                            <img src="images/project_block3_2.jpg" alt="picture">
                             <h4>mountain</h4>
                             <p>
                                 Website
                             </p>
                         </article>
                         <article class="project_pictures3">
-                        <img src="images/project_block3_3.jpg" alt="picture" class="project_img">
+                        <img src="images/project_block3_3.jpg" alt="picture">
                         <h4>camera</h4>
                         <p>
                         Website
