--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">\
+    <link rel="stylesheet" href="CSS/owl.carousel.css">
+    <link rel="stylesheet" href="CSS/owl.theme.default.css">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
@@ -58,7 +60,7 @@
     <section class="brands">
         <div class="container">
             <h2 class="brands_title">How we make brands thrive</h2>
-            <div class="d_flex">
+            <div class="d_flex owl-carousel">
                 <article class="brands_article">
                     <img src="images/Frame.jpg" alt="icon">
                     <h4 class="brands_h4">SET a target</h4>
@@ -175,5 +177,8 @@
     </a>
     <p class="footer_caption">Minimal Template made in Webflow. All rights reserved.</p>
 </footer>
+<script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+<script src="JS/owl.carousel.js"></script>
+<script src="JS/scripts.js"></script>
 </body>
 </html>
