--- a/index.html
+++ b/index.html
@@ -8,34 +8,34 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">\
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Vollkorn&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/owl.carousel.css">
     <link rel="stylesheet" href="CSS/owl.theme.default.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/Preprocess.css">
 </head>
 <body>
 <header>
-<div class="container d_flex">
-    <a href="#">
-        <img src="images/logo.svg" alt="logo">
-    </a>
-    <nav>
-        <ul id="navbar">
-            <li>
-                <a href="#">progress</a>
-            </li>
-            <li>
-                <a href="#">project</a>
-            </li>
-            <li>
-                <a href="#">team</a>
-            </li>
-            <li>
-                <a href="#">contact</a>
-        </li>
-        </ul>
-    </nav>
-</div>
+    <div class="container d_flex">
+        <a href="#">
+            <img src="images/logo.svg" alt="logo">
+        </a>
+        <nav>
+            <ul id="navbar">
+                <li>
+                    <a href="#">progress</a>
+                </li>
+                <li>
+                    <a href="#">project</a>
+                </li>
+                <li>
+                    <a href="#">team</a>
+                </li>
+                <li>
+                    <a href="#">contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
 <main>
     <section class="main_banner">
@@ -52,7 +52,9 @@
     <section class="main_banner_description">
         <div class="container">
             <p>
-                Minimalist is a full-service digital creative agency located in Ontorio Canada. We focus on design, consulting, technology, and photography. We’ve been building unique digital products, platforms, and experiences for the past 6 years. Let us help your company grow.
+                Minimalist is a full-service digital creative agency located in Ontorio Canada. We focus on design,
+                consulting, technology, and photography. We’ve been building unique digital products, platforms, and
+                experiences for the past 6 years. Let us help your company grow.
             </p>
             <a href="#">Get in Touch</a>
         </div>
@@ -65,21 +67,24 @@
                     <img src="images/Frame.jpg" alt="icon">
                     <h4 class="brands_h4">SET a target</h4>
                     <p class="brands_p">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                        elementum tristique.
                     </p>
                 </article>
                 <article class="brands_article">
                     <img src="images/Frame_1.jpg" alt="icon" class="brands_img">
                     <h4 class="brands_h4">design a solution</h4>
                     <p class="brands_p">
-                        Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
+                        Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
+                        erat.
                     </p>
                 </article>
                 <article class="brands_article">
                     <img src="images/Frame_2.jpg" alt="icon" class="brands_img">
                     <h4 class="brands_h4">track the progress</h4>
                     <p class="brands_p">
-                        Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+                        Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
+                        tristique posuere.
                     </p>
                 </article>
             </div>
@@ -88,7 +93,7 @@
     <section class="project">
         <div class="container">
             <h2 class="project_title">Recent projects</h2>
-            <div class="flex_container_project" >
+            <div class="flex_container_project">
                 <article>
                     <img src="images/project_block1_1.jpg" alt="picture">
                     <h4>woods</h4>
@@ -110,74 +115,153 @@
                         Website
                     </p>
                 </article>
-                    <article class="project_pictures2">
-                        <img src="images/project_block2_1.jpg" alt="picture">
-                        <h4>waves</h4>
-                        <p>
-                            Photography
-                        </p>
-                    </article>
-                    <article class="project_pictures2">
-                        <img src="images/project_block2_2.jpg" alt="picture">
-                        <h4>drops</h4>
-                        <p>
-                            Website
-                        </p>
-                    </article>
-                    <article class="project_pictures2">
-                        <img src="images/project_block2_3.jpg" alt="picture">
-                        <h4>ocean</h4>
-                        <p>
-                            Website
-                        </p>
-                    </article>
-                        <article class="project_pictures3">
-                            <img src="images/project_block3_1.jpg" alt="picture">
-                            <h4>town</h4>
-                            <p>
-                                Website
-                            </p>
-                        </article>
-                        <article class="project_pictures3">
-                            <img src="images/project_block3_2.jpg" alt="picture">
-                            <h4>mountain</h4>
-                            <p>
-                                Website
-                            </p>
-                        </article>
-                        <article class="project_pictures3">
-                        <img src="images/project_block3_3.jpg" alt="picture">
-                        <h4>camera</h4>
-                        <p>
+                <article class="project_pictures2">
+                    <img src="images/project_block2_1.jpg" alt="picture">
+                    <h4>waves</h4>
+                    <p>
+                        Photography
+                    </p>
+                </article>
+                <article class="project_pictures2">
+                    <img src="images/project_block2_2.jpg" alt="picture">
+                    <h4>drops</h4>
+                    <p>
                         Website
-                        </p>
-                    </article>
+                    </p>
+                </article>
+                <article class="project_pictures2">
+                    <img src="images/project_block2_3.jpg" alt="picture">
+                    <h4>ocean</h4>
+                    <p>
+                        Website
+                    </p>
+                </article>
+                <article class="project_pictures3">
+                    <img src="images/project_block3_1.jpg" alt="picture">
+                    <h4>town</h4>
+                    <p>
+                        Website
+                    </p>
+                </article>
+                <article class="project_pictures3">
+                    <img src="images/project_block3_2.jpg" alt="picture">
+                    <h4>mountain</h4>
+                    <p>
+                        Website
+                    </p>
+                </article>
+                <article class="project_pictures3">
+                    <img src="images/project_block3_3.jpg" alt="picture">
+                    <h4>camera</h4>
+                    <p>
+                        Website
+                    </p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="team">
+        <div class="container">
+            <h2>our team</h2>
+            <div class="flex_container_project">
+                <article>
+                    <img src="images/Ron1.jpg" alt="img">
+                    <h4 class="name">Ron Swanson</h4>
+                    <p class="job">Founder</p>
+                    <div class="links_social">
+                        <a href="#">
+                            <img src="images/Twitter.svg" alt="img">
+                        </a>
+                        <a href="#">
+                            <img src="images/lincedin.svg" alt="img">
+                        </a>
+                        <a href="#">
+                            <img src="images/mail.svg" alt="img">
+                        </a>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/Julia2.jpg" alt="img">
+                    <h4 class="name">Julia Depish</h4>
+                    <p class="job">Marketing</p>
+                    <div class="links_social">
+                        <a href="#">
+                            <img src="images/Twitter.svg" alt="img">
+                        </a>
+                        <a href="#">
+                            <img src="images/lincedin.svg" alt="img">
+                        </a>
+                        <a href="#">
+                            <img src="images/mail.svg" alt="img">
+                        </a>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/Dany3.jpg" alt="img">
+                    <h4 class="name">Danny Devry</h4>
+                    <p class="job">Designer</p>
+                    <div class="links_social">
+                        <a href="#">
+                            <img src="images/insta.svg" alt="img">
+                        </a>
+                        <a href="#">
+                            <img src="images/Twitter.svg" alt="img">
+                        </a>
+                        <a href="#">
+                            <img src="images/bereal.svg" alt="img">
+                        </a>
+                        <a href="#">
+                            <img src="images/ggg.svg" alt="img">
+                        </a>
+                        <a href="#">
+                            <img src="images/mail.svg" alt="img">
+                        </a>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/Lisa4.jpg" alt="img">
+                    <h4 class="name">Lisa Smith</h4>
+                    <p class="job">Developer</p>
+                    <div class="links_social">
+                        <a href="#">
+                            <img src="images/facebook.svg" alt="img">
+                        </a>
+                        <a href="#">
+                            <img src="images/Twitter.svg" alt="img">
+                        </a>
+                        <a href="#">
+                            <img src="images/mail.svg" alt="img">
+                        </a>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
 </main>
 <footer>
-        <form>
-            <div>
+    <form>
+        <div>
             <input type="text" name="Name" placeholder="Name" class="footer_form1">
-            </div>
-            <input type="text" name="email" placeholder="Email" class="footer_form2">
-            <div>
+        </div>
+        <input type="text" name="email" placeholder="Email" class="footer_form2">
+        <div>
             <input type="text" name="budget" placeholder="Budget" class="footer_form1">
-            </div>
-            <div>
-            <textarea type="comment" name="massage" placeholder="Describe youre project..." class="footer_massage"></textarea>
-            </div>
-            <div>
+        </div>
+        <div>
+            <textarea type="comment" name="massage" placeholder="Describe youre project..."
+                      class="footer_massage"></textarea>
+        </div>
+        <div>
             <button type="submit" class="footer_btn">Send Message</button>
-            </div>
-        </form>
+        </div>
+    </form>
     <a href="#">
-    <img src="images/logo_F.svg" alt="logo" class="footer_img">
+        <img src="images/logo_F.svg" alt="logo" class="footer_img">
     </a>
     <p class="footer_caption">Minimal Template made in Webflow. All rights reserved.</p>
 </footer>
-<script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+        crossorigin="anonymous"></script>
 <script src="JS/owl.carousel.js"></script>
 <script src="JS/scripts.js"></script>
 </body>
