--- a/index.html
+++ b/index.html
@@ -224,13 +224,69 @@
                     <p class="job">Developer</p>
                     <div class="links_social">
                         <a href="#">
-                            <img src="images/facebook.svg" alt="img">
+                            <img src="images/facebook_frame.svg" alt="img">
                         </a>
                         <a href="#">
                             <img src="images/Twitter.svg" alt="img">
                         </a>
                         <a href="#">
                             <img src="images/mail.svg" alt="img">
+                        </a>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="comments">
+        <div class="container">
+            <div class="flex_container_comments">
+                <div class="fix_img">
+                    <img src="images/Vector.svg" alt="img">
+                </div>
+                <article>
+                    <h3 class="comments_right_h3">“I love these guys! They did a<br> great job. I would recommend<br>
+                        them to anyone.”</h3>
+                    <img src="images/comment_m.jpg" alt="img">
+                    <p class="comments_name_right">Julius Von Uberstien</p>
+                </article>
+                <article class="line_comment">
+                </article>
+                <article>
+                    <h4 class="comments_left_h4">“Elexis Corp. has grown<br> immensely with the help<br> of Minimal.”
+                    </h4>
+                    <img src="images/comments_f.jpg" alt="img">
+                    <p class="comments_name_left">Rachel Stamos</p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="lets">
+        <div class="container">
+            <h3 class="lets_title">LET’s Get in touch</h3>
+            <div class="d_flex">
+                <article>
+                    <img src="images/geo.svg" alt="img">
+                    <h4 class="geo_h4">MEET US IN PERSON</h4>
+                    <p class="geo_p">8776 Juniper Street<br>Unit #204<br>Merriweather, Ontorio<br>Canada</p>
+                </article>
+                <article>
+                    <img src="images/mail_lets.svg" alt="img">
+                    <h4 class="lets_mail_h4">The traditional way</h4>
+                    <p class="lets_mail_p1">Email us<br>contact@minimal.com</p>
+                    <p class="lets_mail_p2">Contact form<br>Scroll down</p>
+                </article>
+                <article class="lets_social">
+                    <img src="images/hart.svg" alt="img">
+                    <h4 class="lets_social_h4">Let’s get social</h4>
+                    <div class="fix_location">
+                        <a href="#">
+                            <img src="images/facebook.svg">
+                        </a>
+                        <a href="#">
+                            <img src="images/tw.svg">
+                        </a>
+                        <a href="#">
+                            <img src="images/in.svg">
                         </a>
                     </div>
                 </article>
