--- a/index.html
+++ b/index.html
@@ -278,17 +278,11 @@
                 <article class="lets_social">
                     <img src="images/hart.svg" alt="img">
                     <h4 class="lets_social_h4">Let’s get social</h4>
-                    <div class="fix_location">
-                        <a href="#">
-                            <img src="images/facebook.svg">
-                        </a>
-                        <a href="#">
-                            <img src="images/tw.svg">
-                        </a>
-                        <a href="#">
-                            <img src="images/in.svg">
-                        </a>
-                    </div>
+                    <ul class="fix_location">
+                        <li class="fix1">Facebook</li>
+                        <li class="fix2">Twitter</li>
+                        <li class="fix3">Linkdin</li>
+                    </ul>
                 </article>
             </div>
         </div>
